
   but either will work. You can define as many IP addresses as you like and
   they can be IPV4 or 6. 
   
   You do NOT need to fiddle with this unless you specifically have more
   than just the normal definitions of localhost. So for 'normal' nodes with
   one external interface, you DO NOT NEED TO DO ANY OF THIS. 
2. Added CTY-3304 prefix data
19Jan23=======================================================================
1. Introduce aliasing for localhost in DX Spots and outgoing PC92 A records
   on login. There are two variables which can be set with the alias to use:
      $main::localhost_alias_ipv4
      $main::localhost_alias_ipv6 
   These can be set in the /spider/scripts/startup, but this is only 
   necessary if the node has more than one interface, or virtual hosts. If 
   there is ONLY ONE ipv4 and/or ipv6 IP address on the node machine then 
   these variables will be automatically populated on first use. But the SAFE
   thing to do is to set them in the startup file.  

   THIS FEATURE IS EXPERIMENTAL... 
18Jan23=======================================================================
1. Make sure than *every* channel has an IP address. Thank you (I think) Kin 
   for pointing out that PC92 A records were not going out with IP addresses.
   I'm guessing that other things (like spots) had a similar problem. 
15Jan23=======================================================================
1. Fix strange errors for carp on missing route_*_cache files on startup.
14Jan23=======================================================================
1. Fixed route PC11 promotions so that a new PC61 is actually generated and 
   also sent instead of the original PC11 (to PC61 capable nodes).
13Jan23=======================================================================
1. Periodically store Routing tables and, if they are young enough (def: 3hrs)
   autotically restore them on restart of the node. This will short circuit